feat: 增加用户角色字段和认证服务 && 完善用户登录功能
